--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -31,9 +31,13 @@
 		<div class="jumbotron">
 			<h1 id="name">Scott Klemmer</h1>
 			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
-			<p class="facebookLogin">Please login through Facebook</p>
-			<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-			</fb:login-button>
+			<p class="facebookLogin">
+				Please login through Facebook
+				<br>
+				<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+				</fb:login-button>
+			</p>
+			
 		</div>
 
 		<div id="facebookPhoto" class="profile">
