implemented changeUser() function

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,7 +34,9 @@
 			<p class="facebookLogin">
 				Please login through Facebook
 				<br>
-				<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+				<fb:login-button
+					scope="public_profile,email"
+					onlogin="checkLoginState();">
 				</fb:login-button>
 			</p>
 			
